# train

./: .gitignore
train/: CMakeLists.txt  client.c  fileManager.c  fileManager.h  registrationManager.c  registrationManager.h  server.c  signingManager.c  signingManager.h  socketManager.c  socketManager.h  switchManager.c  switchManager.h  test.txt
